# sizzle

./: .gitignore  LICENSE  PRD.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
infra/: deploy.conf
infra/alicloud/: Dockerfile  api.py  deployer-policy.json  fc3_entry.py  fc_entrypoint.py  login_worker.py  pipeline_worker.py  render_worker.py  requirements.txt
public/: app.js  index.html  run.js  styles.css
scripts/: deploy.sh  setup.sh
sizzle/: __init__.py  allocator.py  assemble.py  browser_auth.py  cli.py  config.py  critic.py  ffmpeg.py  github_auth.py  ingest.py  mcp_server.py  pipeline.py  qwen.py  r2_upload.py  schema.py  story.py
sizzle/lanes/: capture.py  generate.py  render.py  vo.py
worker/: index.ts  live-view-do.ts
